Update java experience questions.md